# Nexsys-GUI

./: Cargo.toml  LICENSE  README.md  nexsys.py  nexsys_gui.py
modules/: convert.py  file_windows.py  plot_window.py  settings_window.py
nexsys-core/: Cargo.toml  README.md
nexsys-core/src/: lib.rs  linalg.rs  mvcalc.rs  pyffi.rs  tests.rs
nexsys-rs/src/: components.rs  lib.rs  test.rs
settings/: settings.json  units.json
src/: components.rs  lib.rs  test.rs
wheels/: nexsys_core-0.1.2-cp39-none-win_amd64.whl
