[package]
name = "nexsys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nexsys_rs"
crate-type = ["cdylib","lib"]

[dependencies]
meval = "0.2.0"
regex = "1.6.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }